feature: working on FreeCell scoring.