@@ -14,20 +14,18 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Stack;
-import java.util.function.Function;
-import java.util.stream.Collectors;
 
 @Slf4j
 @SuppressWarnings("rawtypes")
 public class Klondike extends SolveExecutor<KlondikeBoard> {
     protected static final int LIMIT_SOLUTIONS = 1000;
-    private Function<KlondikeBoard, KlondikeBoard> cloner = KlondikeBoard::new;
 
     public Klondike(Columns columns,
                     Deck deck,
                     List<Stack<Card>> foundations) {
         super(new KlondikeBoard(columns, new Path<>(), 0, deck, new Stack<>(), foundations, true));
         solveBoard(this::solve);
+        cloner(KlondikeBoard::new);
     }
 
     protected void solve(KlondikeBoard board) {
@@ -36,28 +34,24 @@ public class Klondike extends SolveExecutor<KlondikeBoard> {
                     .filter(ObjectUtils::isNotEmpty)
                     .map(it -> applyCandidates(it, board))
                     .filter(it -> !it.isEmpty())
-                    .ifPresentOrElse(super::addAll, () -> drawDeck(board));
+                    .ifPresentOrElse(super::addBoards, () -> drawDeck(board));
         }
     }
 
     protected void drawDeck(KlondikeBoard state) {
         Optional.ofNullable(state.drawDeckCards())
-                .ifPresent(super::add);
+                .ifPresent(super::addBoard);
     }
 
     protected List<KlondikeBoard> applyCandidates(List<Candidate> candidates, KlondikeBoard board) {
         return candidates.stream()
-                .map(it -> cloner.apply(board).updateBoard(it))
+                .map(it -> clone(board).updateBoard(it))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public Pair<Integer, List> getMaxScore(List<List> results) {
         return null;
-    }
-
-    public void cloner(Function<KlondikeBoard, KlondikeBoard> cloner) {
-        this.cloner = cloner;
     }
 }
